--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 name: Wesley Shields
-description: Security Engineer interested in malware, protocols and reverse
-engineering. Retired FreeBSD committer. I also climb on fake rocks.
+description: Security Engineer interested in malware, protocols and reverse engineering. Retired FreeBSD committer. I also climb on fake rocks.
 footer-links:
   twitter: wxs
   github: wxsbsd
