--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 name: Wesley Shields
+title: Wesley Shields
+logo: images/wxs.jpg
 description: Security Engineer interested in malware, protocols and reverse engineering. Retired FreeBSD committer. I also climb on fake rocks.
 footer-links:
   twitter: wxs
