Update index from default.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Wesley Shields
+title: Atarininja
 logo: images/chuck.jpg
-description: Security Engineer interested in malware, protocols and reverse engineering. Retired FreeBSD committer. I also climb on fake rocks.
+description: Absolutely nothing to do with Ataris or Ninjas.
 theme: jekyll-theme-minimal
