Config update, switch logo.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Atarininja
-logo: images/chuck.jpg
+title: Wesley Shields
+logo: images/wxs.jpg
 description: Absolutely nothing to do with Ataris or Ninjas.
 theme: jekyll-theme-minimal
