Update description, again.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Wesley Shields
 logo: images/wxs.jpg
-description: Absolutely nothing to do with Ataris or Ninjas.
+description: Security Engineer interested in malware, protocols and reverse engineering.
 theme: jekyll-theme-minimal
